[1.7.11-SNAPSHOT]
- Fixed inverted back/pause button bindings on Xbox360 controller
- Removed PS3 controller support due to inconsistent support across platforms

[1.7.10]
- Significantly reduce memory usage of XML and JSON serializers

[1.7.9]
- [BREAKING] mini2Dx artemis systems moved from package com.artemis.system to com.artemis to provide access to artemis-odb scopes
- Fix interpolation and rendering systems not checking disabled flag
- Fix DispersedIntervalEntitySystem not removing entities from processing queue if deleted between intervals

[1.7.8]
- Fix collisions not using IDs for equals/hashcode
- Optimise debug rendering of QuadTrees

[1.7.7]
- Added Select#getOption(index) method
- Fixed nested defer() tasks immediately completing with parent

[1.7.6]
- Changed RenderLayer#render to public method
- Reduce memory usage of ParentRenderNode by sharing clip cache across instances

[1.7.5]
- Changed ImageRenderNode textureRegion field visibility to protected
- Fixed TypingTextAnimation not resetting after initially skipped

[1.7.4]
- Fixed LabelRenderNode not updating text if updated from its own defer call

[1.7.3]
- Added additional assert in DisperedIntervalEntitySystemTest
- Fixed multiple UiElement defer ordering when durations are same

[1.7.2]
- Significant memory usage improvements across all geometry classes

[1.7.1]
- Added TypingTextAnimation#getCurrentCharacterIndex

[1.7.0]
- [BREAKING] LayoutRuleset is now applied to both horizontal and vertical calculations
- [BREAKING] UI minHeight now includes padding + margin in check
- [BREAKING] TiledCollisionFactory now takes TiledMap as parameter
- [BREAKING] SlideIn/SlideOut animations now take duration as parameter
- [BREAKING] TiledCollisionMerger#isMergable now accepts TiledMap and TileLayer parameters
- (#74) Added TiledMapLoader for loading TiledMap instances via AssetManager
- Added AnimatedImage element to UI library
- Added new FlexDirections; ROW_REVERSE and CENTER